--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@ function KEY(btnNo){
        <INPUT type="button" name="a_button" value="9" class="btn-sf-like" onclick="KEY(9)">
       </td>
     </tr>
+    <tr>
+      <td>
+         <INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
+      </td>
+       <td>
+   </tr>
   </table>
   </body>
 　</html>
