--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ function KEY(btnNo){
     </tr>
     <tr>
       <td>
+	 <center>
          <INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
+	</center>
       </td>
        <td>
    </tr>
