--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@ function KEY(btnNo){
 }
 //-->
 </script>
+
+<style>
+.table2 th, .table2 td {
+  text-align: center;
+}
+</style>
+
 <h3>解除番号</h3>
 <style type="text/css">
 .btn-sf-like {
@@ -75,11 +82,11 @@ function KEY(btnNo){
        <INPUT type="button" name="a_button" value="9" class="btn-sf-like" onclick="KEY(9)">
       </td>
     </tr>
+	</table>
     <tr>
       <td>
-	 <center>
+	<table class="table2">
          <INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
-	</center>
       </td>
        <td>
    </tr>
