--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@ function KEY(btnNo){
 //-->
 </script>
 
-<style>
-.table2 th, .table2 td {
-  text-align: center;
-}
-</style>
-
 <h3>解除番号</h3>
 <style type="text/css">
 .btn-sf-like {
@@ -82,13 +76,12 @@ function KEY(btnNo){
        <INPUT type="button" name="a_button" value="9" class="btn-sf-like" onclick="KEY(9)">
       </td>
     </tr>
-	</table>
-    <tr>
+ </table>
+      <table border="1">
+  <tr>
       <td>
-	<table class="table2">
          <INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
       </td>
-       <td>
    </tr>
   </table>
   </body>
