--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ function KEY(btnNo){
       </td>
     </tr>
  </table>
+<center>
    <table border="1">
     <tr>
       <td>
@@ -84,5 +85,6 @@ function KEY(btnNo){
       </td>
     </tr>
   </table>
-  </body>
+ </center>
+　</body>
 　</html>
