--- a/index.html
+++ b/index.html
@@ -77,14 +77,12 @@ function KEY(btnNo){
       </td>
     </tr>
  </table>
-<center>
-   <table border="1">
+   <table border="1" align="center">
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
       </td>
     </tr>
   </table>
- </center>
 　</body>
 　</html>
