--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function KEY(btnNo){
 }
 }
 </style>
-  <table border="1">
+  <table border="1" align="center">
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="1" class="btn-sf-like" onclick="KEY(1)">
