--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function KEY(btnNo){
 }
 }
 </style>
-  <table border="1" align="center">
+  <table border="1">
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="1" class="btn-sf-like" onclick="KEY(1)">
@@ -77,12 +77,25 @@ function KEY(btnNo){
       </td>
     </tr>
  </table>
-   <table border="1" align="center">
+   <table border="0">
+    <tr>
+      <td>
+      </td>
+    </tr>
+ </table>
+ <table border="1">
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
       </td>
     </tr>
-  </table>
+    <tr>
+ </table>
+    <table border="0">
+    <tr>
+      <td>
+      </td>
+    </tr>
+ </table>
 　</body>
 　</html>
