--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@ function KEY(btnNo){
 }
 //-->
 </script>
-
+	
+<center>
 <h3>解除番号</h3>
+</center>
+	
 <style type="text/css">
 .btn-sf-like {
   position: relative;
