--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@ function KEY(btnNo){
 //-->
 </script>
 	
-<center>
-<h3>解除番号</h3>
-</center>
-	
+<h3 style="text-align:center">解除番号</h3>	
 <style type="text/css">
 .btn-sf-like {
   position: relative;
