--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ function KEY(btnNo){
    <table border="0">
     <tr>
       <td>
+	<INPUT type="button" name="a_button" value="9" class="btn-sf-like" onclick="KEY(9)">
       </td>
     </tr>
  </table>
