--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@ function KEY(btnNo){
 }
 //-->
 </script>
-	
-<h3 style="text-align:center">解除番号</h3>	
 <style type="text/css">
 .btn-sf-like {
   position: relative;
@@ -41,7 +39,8 @@ function KEY(btnNo){
                6px 0px 15px rgba(255, 255, 240, 0.83);
 }
 </style>
-  <table border="1">
+  <table border="1" align="center">
+<caption>解除番号</caption>
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="1" class="btn-sf-like" onclick="KEY(1)">
@@ -76,13 +75,13 @@ function KEY(btnNo){
       </td>
     </tr>
  </table>
-   <table border="0">
+   <table border="0" align="center">
     <tr>
       <td>
       </td>
     </tr>
  </table>
- <table border="1">
+ <table border="1" align="center">
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="0" class="btn-sf-like" onclick="KEY(0)">
@@ -90,7 +89,7 @@ function KEY(btnNo){
     </tr>
     <tr>
  </table>
-    <table border="0">
+    <table border="0" align="center">
     <tr>
       <td>
       </td>
