--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@ function KEY(btnNo){
                6px 0px 15px rgba(255, 255, 240, 0.83);
 }
 </style>
+<style type="text/css">
+.caption.a { 
+	font-size: 12px; 
+	font-weight: bold;
+}
+	
   <table border="1" align="center">
-<caption>解除番号</caption>
+<caption　class="a">解除番号</caption>
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="1" class="btn-sf-like" onclick="KEY(1)">
