--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ function KEY(btnNo){
 	font-size: 12px; 
 	font-weight: bold;
 }
+</style>	
 	
   <table border="1" align="center">
 <caption　class="a">解除番号</caption>
