--- a/index.html
+++ b/index.html
@@ -38,14 +38,10 @@ function KEY(btnNo){
   text-shadow: -6px 0px 15px rgba(255, 255, 240, 0.83),
                6px 0px 15px rgba(255, 255, 240, 0.83);
 }
-.caption.a { 
-	font-size: 12px; 
-	font-weight: bold;
-}
 </style>	
 	
   <table border="1" align="center">
-<caption　class="a">解除番号</caption>
+<h3>解除番号</h3>
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="1" class="btn-sf-like" onclick="KEY(1)">
