--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function KEY(btnNo){
 </style>	
 	
   <table border="1" align="center">
-<caption>解除番号</caption>
+<caption align="center">解除番号</caption>
     <tr>
       <td>
 	<INPUT type="button" name="a_button" value="1" class="btn-sf-like" onclick="KEY(1)">
